# opencv_cuda_test

./: CMakeLists.txt  README.md  README_zh-CN.md  main.cpp
.cache/clangd/index/: main.cpp.66DB97B591DFA2F0.idx  main.cpp.A2FB4B4AF5D46161.idx  testFunc.cpp.844983F85C85AF7C.idx  testFunc.h.3DB19C053A618F94.idx
install/: .setup.bash
script/: README.md  setup_vinci_emis.bash  vinci_emis
src/: CMakeLists.txt  main.cpp
src/OPENCV_CUDA/: CMakeLists.txt
src/OPENCV_CUDA/inc/: opencv_cuda.hpp
src/OPENCV_CUDA/src/: opencv_cuda.cpp
